--- a/css/style.css
+++ b/css/style.css
@@ -85,38 +85,6 @@ Navigation
      }
 }
 
-#cd-logo {
-     float: left;
-     margin: 13px 0 0 5%;
-}
-
-#cd-logo img {
-     display: block;
-}
-
-@media only screen and (min-width: 768px) {
-     #cd-logo {
-          margin: 23px 0 0 5%;
-     }
-}
-
-@media only screen and (min-width: 1170px) {
-     #cd-logo.is-hidden {
-          /* assign a position fixed and move outside the viewport (on the left) */
-          opacity: 0;
-          position: fixed;
-          left: -20%;
-          margin-left: 0;
-          -webkit-transition: left 0.3s, opacity 0.3s;
-          -moz-transition: left 0.3s, opacity 0.3s;
-          transition: left 0.3s, opacity 0.3s;
-     }
-     #cd-logo.is-hidden.slide-in {
-          /* slide in when the secondary navigation gets fixed */
-          left: 5%;
-          opacity: 1;
-     }
-}
 
 .cd-primary-nav {
      /* mobile first - navigation hidden by default, triggered by tap/click on navigation icon */
@@ -126,6 +94,7 @@ Navigation
      height: 100%;
      background: url("../img/cd-icon-menu.svg") no-repeat center center;
      background-size: 44px 44px;
+     cursor: context-menu;
 }
 
 .cd-primary-nav ul {
@@ -628,6 +597,22 @@ FOOTER Section
      letter-spacing: 5vw;
      color: rgba(255, 255, 255, 0.10);
 }
+
+.content_foot p {
+     position: absolute;
+     letter-spacing: normal;
+     display: inline-block;
+     margin: 8px;
+     text-indent: 30px;
+}
+
+.content_foot p:hover {
+     letter-spacing: normal;
+     display: inline-flex;
+}
+
+
+
 
 .iframe {
      margin: auto;
