--- a/css/style.css
+++ b/css/style.css
@@ -268,8 +268,6 @@ Secondary Fixed Navigation
 .cd-secondary-nav {
      position: relative;
      z-index: 3;
-     -webkit-font-smoothing: antialiased;
-     -moz-osx-font-smoothing: grayscale;
 }
 
 .cd-secondary-nav ul {
@@ -576,6 +574,61 @@ Placeholder Sections
           font-size: 1.25rem;
      }
 }
+
+
+/* --------------------------------
+
+VIDEO-HOLDER Section
+
+-------------------------------- */
+
+.video-container {
+     width: 90%;
+     max-width: 768px;
+     margin: 0 auto;
+     display: flex;
+     flex-wrap: wrap;
+}
+
+.video-holder-1 {
+     width: 100%;
+     height: auto;
+     margin: 5px 10px 10px 50px;
+}
+
+.video-holder-2 {
+     width: 700px;
+     height: auto;
+     margin: 5px 10px 10px 5px;
+}
+
+.video-holder-3 {
+     width: 30%;
+     height: auto;
+     margin: 5px 10px 10px 5px;
+}
+
+.video-holder-4 {
+     width: 30%;
+     height: auto;
+     margin: 5px 10px 10px 5px;
+}
+
+.video-holder-5 {
+     width: 30%;
+     height: auto;
+     margin: 5px 10px 10px 5px;
+}
+
+.video-holder-6 {
+     width: 30%;
+     height: auto;
+     margin: 5px 10px 10px 5px;
+}
+
+
+
+
 
 /* --------------------------------
 
