--- a/ux/index.css
+++ b/ux/index.css
@@ -3,6 +3,7 @@
          margin: 0px;
          width: 100%;
          font-family: 'Karla', sans-serif;
+         background-color: white;
     }
 
     p {
