--- a/animation/ovelse-2-css-animation/css-animation/stylesheet.css
+++ b/animation/ovelse-2-css-animation/css-animation/stylesheet.css
@@ -36,6 +36,7 @@
      animation-timing-function: ease-out;
      animation-iteration-count: 1;
      animation-fill-mode: both;
+     animation-iteration-count: infinite;
 }
 
 .bom {
@@ -65,7 +66,7 @@
      animation-name: tog;
      animation-duration: 5s;
      animation-timing-function: linear;
-     animation-iteration-count: 1;
+     animation-iteration-count: infinite;
      animation-delay: 3s;
 
 
@@ -86,7 +87,7 @@
           transform: translateY(0);
      }
      to {
-          transform: translateY(-300px);
+          transform: translateY(-250px);
      }
 }
 
