--- a/portfolo/css/port.css
+++ b/portfolo/css/port.css
@@ -163,6 +163,13 @@ h2 {
      font-family: sans-serif;
 }
 
+h1 {
+     color: black;
+     font-family: sans-serif;
+     font-size: 2em;
+     text-align: center;
+}
+
 .animation-content {
      flex-basis: 400px;
      margin: 20px 0 0 0;
@@ -171,4 +178,33 @@ h2 {
      display: block;
      text-align: center;
      width: 30%;
+}
+
+.ux-section {
+     max-width: 1200px;
+     height: 100%;
+     margin: auto;
+     padding: 2% 2%;
+     display: block;
+     background-color: #fff;
+}
+
+.ux-content {
+     margin: 20px 0 0 0;
+     padding: 0;
+     display: block;
+     text-align: center;
+     width: 100%;
+}
+
+.ux-li {
+     font-family: serif;
+     color: #fff;
+     font-size: 1.25em;
+     line-height: 1.6;
+}
+
+
+#h2-center {
+     text-align: center;
 }
